@@ -7,6 +7,10 @@
           src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
           implementations to NavigationInfo, Viewpoint.
 
+        * src/openvrml/OpenVRML/vrml97node.cpp,
+          src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
+          implementation to Text.
+
 2003-02-08  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/vrml97node.cpp,
